--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,3 +2,10 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
+@import "banner";
+@import "list-card";
+@import "card";
+
+body {
+  background-color: #a7bbc7;
+}
