--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container bg-light p-4 mt-4 rounded">
   <h1>Create a new bookmark</h1>
   <%= simple_form_for [@list, @bookmark] do |f| %>
     <%= f.input :comment %>
@@ -6,5 +6,5 @@
     <%= f.submit %>
   <% end %>
   <br>
-  <%= link_to 'Back', list_path(@list) %>
+  <%= link_to 'Back', list_path(@list), class: "btn btn-dark"  %>
 </div>
