--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container bg-light p-4 mt-4 rounded">
   <h1>Create a new list</h1>
   <%= simple_form_for @list do |f| %>
     <%= f.input :name %>
