--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,8 +1,20 @@
-<div class="container">
+<div class="container bg-light p-4 rounded mt-4">
   <h1><%= @list.name %></h1>
   <br>
+  <div class="card-container">
+    <% @list.bookmarks.each do |bookmark| %>
+      <div class="li-card">
+        <div class="movie-image">
+           <img src="<%= bookmark.movie.poster_url %>" alt="movie-image" class="card-img">
+        </div>
+        <div class="content">
+          <h4 class="card-title"><%= bookmark.movie.title %></h4>
+          <p class="card-text"><%= bookmark.movie.overview %></p>
+        </div>
+      </div>
+    <% end %>
+  </div>
   <br>
-  <%= link_to 'Add movie', new_list_bookmark_path(@list) %>
-  <br>
-  <%= link_to 'Back', lists_path %>
+  <%= link_to 'Add movie', new_list_bookmark_path(@list), class: "btn btn-dark" %>
+  <%= link_to 'Back', lists_path, class: "btn btn-dark" %>
 </div>
